--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,55 +2,200 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "pycharm": {
      "is_executing": false
     }
    },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sb\n",
+    "import numpy as np\n",
+    "import math as m\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "np.set_printoptions(formatter={'float': lambda x: \"{0:0.2f}\".format(x)})\n",
+    "\n",
+    "# Reader score must be set to a very small value otherwise there will be a division by 0\n",
+    "\n",
+    "epsilon = 0.000001\n",
+    "\n",
+    "# CSV file parsing\n",
+    "\n",
+    "info = pd.read_csv(\"data/info.csv\")\n",
+    "paper_authors = pd.read_csv(\"data/authors.csv\")\n",
+    "paper_authors = paper_authors.values\n",
+    "paper_ratings = pd.read_csv(\"data/ratings.csv\")\n",
+    "paper_ratings = paper_ratings.values\n",
+    "\n",
+    "# Initial setup\n",
+    "\n",
+    "dataset_name = info[\"Dataset\"][0]\n",
+    "papers_number = info[\"Paper\"][0]\n",
+    "readers_number = info[\"Reader\"][0]\n",
+    "ratings_number = info[\"Rating\"][0]\n",
+    "authors_number = info[\"Author\"][0]\n",
+    "papers = np.arange(papers_number)\n",
+    "readers = np.arange(readers_number)\n",
+    "ratings = np.arange(ratings_number)\n",
+    "authors = np.arange(authors_number)\n",
+    "paper_steadiness = np.zeros(papers_number)\n",
+    "paper_score = np.zeros(papers_number)\n",
+    "rating_goodness = np.empty(ratings_number)\n",
+    "reader_steadiness = np.zeros(readers_number)\n",
+    "reader_score = np.zeros(readers_number)\n",
+    "reader_score.fill(epsilon)\n",
+    "author_steadiness = np.zeros(authors_number)\n",
+    "author_score = np.zeros(authors_number)\n",
+    "\n",
+    "\n",
+    "def get_author(current_paper):\n",
+    "    found_authors = []\n",
+    "    for author_index, author_entry in enumerate(paper_authors):\n",
+    "        current_author = int(author_entry[0])\n",
+    "        written_papers = author_entry[1].split(\";\")\n",
+    "        written_papers = [int(x) for x in written_papers]\n",
+    "        if current_paper in written_papers :\n",
+    "            found_authors.append(current_author)\n",
+    "    return np.asarray(found_authors)\n",
+    "\n",
+    "\n",
+    "for index, entry in enumerate(paper_ratings):\n",
+    "\n",
+    "    # Example: <1,1,2,0.8,0>\n",
+    "    # At Timestamp 1 Reader 1 gave to Paper 2 a Rating of 0.8 written by Author 0\n",
+    "    timestamp = int(entry[0])\n",
+    "    reader = int(entry[1])\n",
+    "    paper = int(entry[2])\n",
+    "    rating = entry[3]\n",
+    "    authors_of_paper = get_author(paper)\n",
+    "\n",
+    "    # COMPUTATION START: PAPER AND READER SCORE\n",
+    "\n",
+    "    # Saving values at time t(i)\n",
+    "\n",
+    "    old_paper_steadiness = paper_steadiness[paper]\n",
+    "    old_paper_score = paper_score[paper]\n",
+    "    old_reader_steadiness = reader_steadiness[reader]\n",
+    "    old_rating_goodness = rating_goodness[timestamp]\n",
+    "    old_reader_score = reader_score[reader]\n",
+    "\n",
+    "    # Updating values at time t(i+1)\n",
+    "\n",
+    "    paper_steadiness[paper] = old_paper_steadiness + old_reader_score\n",
+    "    paper_score[paper] = ((old_paper_steadiness * old_paper_score) + (old_reader_score * rating)) / paper_steadiness[paper]\n",
+    "    rating_goodness[timestamp] = 1 - (m.sqrt(abs(rating - paper_score[paper])))\n",
+    "    reader_steadiness[reader] = (old_reader_steadiness + paper_steadiness[paper])\n",
+    "    reader_score[reader] = ((old_reader_steadiness * old_reader_score) + (paper_steadiness[paper] * rating_goodness[timestamp])) / reader_steadiness[reader]\n",
+    "\n",
+    "    # COMPUTATION START: AUTHOR SCORE\n",
+    "\n",
+    "    for author in authors_of_paper:\n",
+    "        \n",
+    "        # Saving values at time t(i)\n",
+    "\n",
+    "        old_author_steadiness = author_steadiness[author]\n",
+    "        old_author_score = author_score[author]\n",
+    "\n",
+    "        # Updating values at time t(i+1)\n",
+    "\n",
+    "        author_steadiness[author] = old_author_steadiness + old_reader_score\n",
+    "        author_score[author] = ((old_author_steadiness * old_author_score) + (old_reader_score * rating)) / author_steadiness[author]\n",
+    "\n",
+    "    # COMPUTATION START: PROPAGATING CHANGES TO PREVIOUS READERS\n",
+    "\n",
+    "    if index > 0:\n",
+    "\n",
+    "        previous_paper_ratings = paper_ratings[:(index - 1)]\n",
+    "\n",
+    "        for previous_index, previous_entry in enumerate(previous_paper_ratings):\n",
+    "\n",
+    "            previous_timestamp = int(previous_entry[0])\n",
+    "            previous_reader = int(previous_entry[1])\n",
+    "            previous_paper = int(previous_entry[2])\n",
+    "            previous_rating = previous_entry[3]\n",
+    "            previous_author = int(previous_entry[4])\n",
+    "\n",
+    "            if paper == previous_paper and reader != previous_reader:\n",
+    "                \n",
+    "                # Saving previous values at time t(i)\n",
+    "\n",
+    "                old_previous_reader_steadiness = reader_steadiness[previous_reader]\n",
+    "                old_previous_reader_score = reader_score[previous_reader]\n",
+    "                old_previous_rating = previous_rating\n",
+    "                old_previous_rating_goodness = rating_goodness[previous_timestamp]\n",
+    "\n",
+    "                # Updating previous values at time t(i+1)\n",
+    "\n",
+    "                previous_rating_goodness = 1 - (m.sqrt(abs(previous_rating - paper_score[paper])))\n",
+    "                reader_steadiness[previous_reader] = (old_previous_reader_steadiness + old_reader_score)\n",
+    "                reader_score[previous_reader] = ((old_previous_reader_steadiness * old_previous_reader_score) +\n",
+    "                                                 (old_paper_steadiness * old_rating_goodness) +\n",
+    "                                                 (paper_steadiness[paper] * previous_rating_goodness)) \\\n",
+    "                                                / reader_steadiness[previous_reader]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Paper1  Paper2  Paper3\n0     0.8     0.0     0.8\n1     0.2     0.5     0.0\n2     0.2     0.5     0.0\n"
+      "PAPER SCORE:        [0.80 0.50]\nPAPER STEADINESS:   [1.00 0.55]\nREADER SCORE:       [1.00 0.23 0.50 1.00]\nREADER STEADINESS:  [1.00 1.00 1.55 1.55]\nAUTHOR SCORE:       [0.69]\nAUTHOR STEADINESS:  [1.55]\nCHART: PAPER / PAPER SCORE\nCHART: PAPER / PAPER STEADINESS\nCHART: READER / READER SCORE\nCHART: READER / READER STEADINESS\nCHART: AUTHOR / AUTHOR SCORE\nCHART: AUTHOR / AUTHOR STEADINESS\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0xbdbe30>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import math as m\n",
+    "# Summary\n",
     "\n",
-    "paper_ratings = pd.read_csv(\"../data/ratings.csv\")\n",
-    "papers_number, readers_number = paper_ratings.shape\n",
+    "print(\"PAPER SCORE:       \", paper_score)\n",
+    "print(\"PAPER STEADINESS:  \", paper_steadiness)\n",
+    "print(\"READER SCORE:      \", reader_score)\n",
+    "print(\"READER STEADINESS: \", reader_steadiness)\n",
+    "print(\"AUTHOR SCORE:      \", author_score)\n",
+    "print(\"AUTHOR STEADINESS: \", author_steadiness)\n",
     "\n",
-    "epsilon = 0.000001\n",
+    "# Charts\n",
     "\n",
-    "paper_steadiness = np.zeros(papers_number)\n",
-    "paper_score = np.zeros(papers_number)\n",
-    "reader_steadiness = np.zeros(readers_number)\n",
-    "reader_score = np.full(readers_number, epsilon)\n",
+    "print(\"CHART: PAPER / PAPER SCORE\")\n",
+    "dataframe = pd.DataFrame({'Paper' : papers, 'Score' : paper_score})\n",
+    "dataframe.plot('Paper', 'Score', kind='bar')\n",
     "\n",
+    "print(\"CHART: PAPER / PAPER STEADINESS\")\n",
+    "dataframe = pd.DataFrame({'Paper': papers, 'Steadiness': paper_steadiness})\n",
+    "dataframe.plot('Paper', 'Steadiness', kind='bar')\n",
     "\n",
-    "print(paper_ratings)\n",
+    "print(\"CHART: READER / READER SCORE\")\n",
+    "dataframe = pd.DataFrame({'Reader': readers, 'Score': reader_score})\n",
+    "dataframe.plot('Reader', 'Score', kind='bar')\n",
     "\n",
-    "# PAPER STEADINESS COMPUTATION\n",
+    "print(\"CHART: READER / READER STEADINESS\")\n",
+    "dataframe = pd.DataFrame({'Reader': readers, 'Steadiness': reader_steadiness})\n",
+    "dataframe.plot('Reader', 'Steadiness', kind='bar')\n",
     "\n",
-    "papers_indexes = range(0, papers_number)\n",
+    "print(\"CHART: AUTHOR / AUTHOR SCORE\")\n",
+    "dataframe = pd.DataFrame({'Author': authors, 'Score': author_score})\n",
+    "dataframe.plot('Author', 'Score', kind='bar')\n",
     "\n",
-    "for index in papers_indexes:\n",
-    "    \n",
-    "    current_ratings = paper_ratings.iloc[:, index]\n",
-    "    \n",
-    "    for rating in current_ratings:\n",
-    "        \n",
-    "        old_paper_steadiness = paper_steadiness[index]\n",
-    "        old_paper_score = paper_score[index]\n",
-    "        old_reader_steadiness = reader_steadiness[index]\n",
-    "        old_rating_goodness = 1 - (m.sqrt(abs(rating-old_paper_score)))\n",
-    "        old_reader_score = reader_score[index]"
+    "print(\"CHART: AUTHOR / AUTHOR STEADINESS\")\n",
+    "dataframe = pd.DataFrame({'Author': authors, 'Steadiness': author_steadiness})\n",
+    "dataframe.plot('Author', 'Steadiness', kind='bar')"
    ]
   },
   {
