Implementation of TrueReview model in progress.

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -140,25 +140,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PAPER SCORE:        [0.80 0.50]\nPAPER STEADINESS:   [1.00 0.55]\nREADER SCORE:       [1.00 0.23 0.50 1.00]\nREADER STEADINESS:  [1.00 1.00 1.55 1.55]\nAUTHOR SCORE:       [0.69]\nAUTHOR STEADINESS:  [1.55]\nCHART: PAPER / PAPER SCORE\nCHART: PAPER / PAPER STEADINESS\nCHART: READER / READER SCORE\nCHART: READER / READER STEADINESS\nCHART: AUTHOR / AUTHOR SCORE\nCHART: AUTHOR / AUTHOR STEADINESS\n"
+      "PAPER SCORE:        [0.80 0.50]\nPAPER STEADINESS:   [1.00 0.55]\nREADER SCORE:       [1.00 0.23 0.50 1.00]\nREADER STEADINESS:  [1.00 1.00 1.55 1.55]\nAUTHOR SCORE:       [0.69]\nAUTHOR STEADINESS:  [1.55]\nCHART: PAPER / PAPER SCORE\nCHART: PAPER / PAPER STEADINESS\nCHART: READER / READER SCORE"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0xbdbe30>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\nCHART: READER / READER STEADINESS\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CHART: AUTHOR / AUTHOR SCORE\nCHART: AUTHOR / AUTHOR STEADINESS\n"
+     ]
     }
    ],
    "source": [
@@ -176,27 +180,40 @@
     "print(\"CHART: PAPER / PAPER SCORE\")\n",
     "dataframe = pd.DataFrame({'Paper' : papers, 'Score' : paper_score})\n",
     "dataframe.plot('Paper', 'Score', kind='bar')\n",
+    "plt.show()\n",
     "\n",
     "print(\"CHART: PAPER / PAPER STEADINESS\")\n",
     "dataframe = pd.DataFrame({'Paper': papers, 'Steadiness': paper_steadiness})\n",
     "dataframe.plot('Paper', 'Steadiness', kind='bar')\n",
+    "plt.show()\n",
     "\n",
     "print(\"CHART: READER / READER SCORE\")\n",
     "dataframe = pd.DataFrame({'Reader': readers, 'Score': reader_score})\n",
     "dataframe.plot('Reader', 'Score', kind='bar')\n",
+    "plt.show()\n",
     "\n",
     "print(\"CHART: READER / READER STEADINESS\")\n",
     "dataframe = pd.DataFrame({'Reader': readers, 'Steadiness': reader_steadiness})\n",
     "dataframe.plot('Reader', 'Steadiness', kind='bar')\n",
+    "plt.show()\n",
     "\n",
     "print(\"CHART: AUTHOR / AUTHOR SCORE\")\n",
     "dataframe = pd.DataFrame({'Author': authors, 'Score': author_score})\n",
     "dataframe.plot('Author', 'Score', kind='bar')\n",
+    "plt.show()\n",
     "\n",
     "print(\"CHART: AUTHOR / AUTHOR STEADINESS\")\n",
     "dataframe = pd.DataFrame({'Author': authors, 'Steadiness': author_steadiness})\n",
-    "dataframe.plot('Author', 'Steadiness', kind='bar')"
+    "dataframe.plot('Author', 'Steadiness', kind='bar')\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
