--- a/notebooks/TrueReview.ipynb
+++ b/notebooks/TrueReview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -11,19 +11,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8\n0.8\n"
+      "RATING INFORMATIVENESS:  [0.00 0.09 0.09 0.00 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.09 0.36 0.00 0.00 0.00]\nRATING BONUS:            [0.00 0.23 0.19 0.00 0.00 0.00]\n"
      ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-f021edd1cabf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     55\u001b[0m             \u001b[0mtrue_future_ratings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfuture_rating\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 57\u001b[1;33m     \u001b[0mqi_past_ratings\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrue_past_ratings\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrue_past_ratings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     58\u001b[0m     \u001b[0mqi_future_ratings\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrue_future_ratings\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrue_future_ratings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ],
-     "output_type": "error"
     }
    ],
    "source": [
@@ -53,41 +42,68 @@
     "readers = np.arange(readers_number)\n",
     "ratings = np.arange(ratings_number)\n",
     "paper_score = np.zeros(papers_number)\n",
-    "rating_bonuses = np.zeros(ratings_number)\n",
-    "reader_bonuses = np.zeros(readers_number)\n",
+    "rating_informativeness = np.zeros(ratings_number)\n",
+    "rating_accuracy_loss = np.zeros(ratings_number)\n",
+    "rating_bonus = np.zeros(ratings_number)\n",
+    "reader_bonus = np.zeros(readers_number)\n",
     "reader_score = np.zeros(readers_number)\n",
     "\n",
-    "for index, entry in enumerate(paper_ratings):\n",
     "\n",
-    "    # Example: <1,1,2,0.8>\n",
-    "    # At Timestamp 1 Reader 1 gave to Paper 2 a Rating of 0.8\n",
-    "    timestamp = int(entry[0]) \n",
-    "    reader = int(entry[1]) \n",
-    "    paper = int(entry[2]) \n",
-    "    rating = entry[3] \n",
+    "def quadratic_loss(a, b):\n",
+    "    return m.pow((a - b), 2)\n",
+    "\n",
+    "\n",
+    "def logistic_function(value):\n",
+    "    return 1 / 1 + (m.exp((-1 * (value - 0.5))))\n",
+    "\n",
+    "\n",
+    "for current_paper in papers:\n",
+    "\n",
+    "    current_paper_ratings = []\n",
     "    \n",
-    "    past_ratings = paper_ratings[:(index-1)] \n",
-    "    future_ratings = paper_ratings[(index+1):] \n",
-    "    true_past_ratings = [] \n",
-    "    true_future_ratings = []\n",
+    "    for index, entry in enumerate(paper_ratings):\n",
     "    \n",
-    "    for past_index, past_entry in enumerate(past_ratings): \n",
-    "        past_paper = int(entry[2]) \n",
-    "        past_rating = entry[3] \n",
-    "        if paper == past_paper: \n",
-    "            true_past_ratings.append(past_rating) \n",
+    "        # Example: <1,1,2,0.8>\n",
+    "        # At Timestamp 1 Reader 1 gave to Paper 2 a Rating of 0.8\n",
+    "        timestamp = int(entry[0])\n",
+    "        reader = int(entry[1])\n",
+    "        paper = int(entry[2])\n",
+    "        rating = entry[3]\n",
+    "        \n",
+    "        if paper == current_paper:\n",
+    "            current_paper_ratings.append(entry)\n",
+    "     \n",
+    "    for index, entry in enumerate(current_paper_ratings):\n",
     "    \n",
-    "    for future_index, future_entry in enumerate(future_ratings): \n",
-    "        future_paper = int(entry[2]) \n",
-    "        future_rating = entry[3] \n",
-    "        if paper == future_paper: \n",
-    "            true_future_ratings.append(future_rating) \n",
+    "        timestamp = int(entry[0])\n",
+    "        reader = int(entry[1])\n",
+    "        paper = int(entry[2])\n",
+    "        rating = entry[3]\n",
     "    \n",
-    "    qi_past_ratings = sum(true_past_ratings) / len(true_past_ratings) \n",
-    "    qi_future_ratings = sum(true_future_ratings) / len(true_future_ratings) \n",
-    "    \n",
-    "    print(qi_past_ratings) \n",
-    "    print(qi_future_ratings)\n"
+    "        if 0 < index < len(current_paper_ratings)-1:\n",
+    "            \n",
+    "            past_ratings = current_paper_ratings[:index] \n",
+    "            past_scores = []\n",
+    "            for past_index, past_entry in enumerate(past_ratings):\n",
+    "                past_rating = past_entry[3]\n",
+    "                past_scores.append(past_rating)\n",
+    "                \n",
+    "            future_ratings = current_paper_ratings[(index+1):]\n",
+    "            future_scores = []\n",
+    "            for future_index, future_entry in enumerate(future_ratings):\n",
+    "                future_rating = future_entry[3]\n",
+    "                future_scores.append(future_rating)\n",
+    "            \n",
+    "            qi_past_ratings = sum(past_scores) / len(past_scores)\n",
+    "            qi_future_ratings = sum(future_scores) / len(future_scores)\n",
+    "                                \n",
+    "            rating_informativeness[timestamp] = quadratic_loss(qi_past_ratings, qi_future_ratings)\n",
+    "            rating_accuracy_loss[timestamp] = quadratic_loss(rating, qi_future_ratings)\n",
+    "            rating_bonus[timestamp] = rating_informativeness[timestamp] * logistic_function(rating_accuracy_loss[timestamp])\n",
+    "            \n",
+    "print(\"RATING INFORMATIVENESS: \", rating_informativeness)\n",
+    "print(\"RATING ACCURACY LOSS:   \", rating_accuracy_loss)\n",
+    "print(\"RATING BONUS:           \", rating_bonus)"
    ]
   },
   {
