Implementation of TrueReview model completed.

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -25,10 +25,10 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "info = pd.read_csv(\"data/info.csv\")\n",
-    "paper_authors = pd.read_csv(\"data/authors.csv\")\n",
+    "info = pd.read_csv(\"data/ground_truth/info.csv\")\n",
+    "paper_authors = pd.read_csv(\"data/ground_truth/authors.csv\")\n",
     "paper_authors = paper_authors.values\n",
-    "paper_ratings = pd.read_csv(\"data/ratings.csv\")\n",
+    "paper_ratings = pd.read_csv(\"data/ground_truth/ratings.csv\")\n",
     "paper_ratings = paper_ratings.values\n",
     "\n",
     "# Initial setup\n",
@@ -140,28 +140,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PAPER SCORE:        [0.80 0.50]\nPAPER STEADINESS:   [1.00 0.55]\nREADER SCORE:       [1.00 0.23 0.50 1.00]\nREADER STEADINESS:  [1.00 1.00 1.55 1.55]\nAUTHOR SCORE:       [0.69]\nAUTHOR STEADINESS:  [1.55]\nCHART: PAPER / PAPER SCORE\nCHART: PAPER / PAPER STEADINESS\nCHART: READER / READER SCORE"
+      "PAPER SCORE:        [0.80 0.50]\nPAPER STEADINESS:   [1.00 0.55]\nREADER SCORE:       [1.00 0.23 0.50 1.00]\nREADER STEADINESS:  [1.00 1.00 1.55 1.55]\nAUTHOR SCORE:       [0.69]\nAUTHOR STEADINESS:  [1.55]\nCHART: PAPER / PAPER SCORE\nCHART: PAPER / PAPER STEADINESS\nCHART: READER / READER SCORE\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\nCHART: READER / READER STEADINESS\n"
+      "CHART: READER / READER STEADINESS\nCHART: AUTHOR / AUTHOR SCORE\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHART: AUTHOR / AUTHOR SCORE\nCHART: AUTHOR / AUTHOR STEADINESS\n"
+      "CHART: AUTHOR / AUTHOR STEADINESS\n"
      ]
     }
    ],
@@ -205,15 +205,9 @@
     "print(\"CHART: AUTHOR / AUTHOR STEADINESS\")\n",
     "dataframe = pd.DataFrame({'Author': authors, 'Steadiness': author_steadiness})\n",
     "dataframe.plot('Author', 'Steadiness', kind='bar')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
