--- a/notebooks/TrueReview.ipynb
+++ b/notebooks/TrueReview.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RATING INFORMATIVENESS:  [0.00 0.09 0.09 0.00 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.09 0.36 0.00 0.00 0.00]\nRATING BONUS:            [0.00 0.23 0.19 0.00 0.00 0.00]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sb\n",
@@ -26,10 +18,10 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "info = pd.read_csv(\"data/info.csv\")\n",
-    "paper_authors = pd.read_csv(\"data/authors.csv\")\n",
+    "info = pd.read_csv(\"data/ground_truth/info.csv\")\n",
+    "paper_authors = pd.read_csv(\"data/ground_truth/authors.csv\")\n",
     "paper_authors = paper_authors.values\n",
-    "paper_ratings = pd.read_csv(\"data/ratings.csv\")\n",
+    "paper_ratings = pd.read_csv(\"data/ground_truth/ratings.csv\")\n",
     "paper_ratings = paper_ratings.values\n",
     "\n",
     "# Initial setup\n",
@@ -60,6 +52,9 @@
     "for current_paper in papers:\n",
     "\n",
     "    current_paper_ratings = []\n",
+    "    ratings_sum = 0\n",
+    "    \n",
+    "    # For each paper, consider only its ratings and throw away the other ones\n",
     "    \n",
     "    for index, entry in enumerate(paper_ratings):\n",
     "    \n",
@@ -72,21 +67,31 @@
     "        \n",
     "        if paper == current_paper:\n",
     "            current_paper_ratings.append(entry)\n",
+    "\n",
+    "    # For each rating of the paper under consideration, compute the required quantities\n",
     "     \n",
     "    for index, entry in enumerate(current_paper_ratings):\n",
-    "    \n",
+    "\n",
+    "        # Example: <1,1,2,0.8>\n",
+    "        # At Timestamp 1 Reader 1 gave to Paper 2 a Rating of 0.8\n",
     "        timestamp = int(entry[0])\n",
     "        reader = int(entry[1])\n",
     "        paper = int(entry[2])\n",
     "        rating = entry[3]\n",
     "    \n",
+    "        # 0 < i < n\n",
+    "    \n",
     "        if 0 < index < len(current_paper_ratings)-1:\n",
+    "            \n",
+    "            # COMPUTATION START: QI_PAST\n",
     "            \n",
     "            past_ratings = current_paper_ratings[:index] \n",
     "            past_scores = []\n",
     "            for past_index, past_entry in enumerate(past_ratings):\n",
     "                past_rating = past_entry[3]\n",
     "                past_scores.append(past_rating)\n",
+    "                \n",
+    "            # COMPUTATION START: QI_FUTURE\n",
     "                \n",
     "            future_ratings = current_paper_ratings[(index+1):]\n",
     "            future_scores = []\n",
@@ -97,21 +102,71 @@
     "            qi_past_ratings = sum(past_scores) / len(past_scores)\n",
     "            qi_future_ratings = sum(future_scores) / len(future_scores)\n",
     "                                \n",
+    "            # COMPUTATION START: INFORMATIVENESS and ACCURACY LOSS\n",
+    "            \n",
     "            rating_informativeness[timestamp] = quadratic_loss(qi_past_ratings, qi_future_ratings)\n",
     "            rating_accuracy_loss[timestamp] = quadratic_loss(rating, qi_future_ratings)\n",
+    "            \n",
+    "            # COMPUTATION START: RATING BONUS\n",
+    "            \n",
     "            rating_bonus[timestamp] = rating_informativeness[timestamp] * logistic_function(rating_accuracy_loss[timestamp])\n",
     "            \n",
-    "print(\"RATING INFORMATIVENESS: \", rating_informativeness)\n",
-    "print(\"RATING ACCURACY LOSS:   \", rating_accuracy_loss)\n",
-    "print(\"RATING BONUS:           \", rating_bonus)"
+    "            # COMPUTATION START: READER BONUS - it is the sum of the bonus computed for each of its ratings\n",
+    "            \n",
+    "            reader_bonus[reader] = reader_bonus[reader] + rating_bonus[timestamp]\n",
+    "            \n",
+    "        # Sum the current rating to compute the mean at the end\n",
+    "            \n",
+    "        ratings_sum = ratings_sum + rating\n",
+    "            \n",
+    "    # COMPUTATION START: PAPER SCORE - scores can be aggregated with an index of your choice\n",
+    "    \n",
+    "    paper_score[current_paper] = ratings_sum / len(current_paper_ratings)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Summary\n",
+    "\n",
+    "print(\"RATING INFORMATIVENESS: \", rating_informativeness)\n",
+    "print(\"RATING ACCURACY LOSS:   \", rating_accuracy_loss)\n",
+    "print(\"RATING BONUS:           \", rating_bonus)\n",
+    "print(\"READER BONUS:           \", reader_bonus)\n",
+    "print(\"PAPER  SCORE:           \", paper_score)\n",
+    "\n",
+    "# Charts\n",
+    "\n",
+    "print(\"CHART: RATING / RATING INFORMATIVENESS\")\n",
+    "dataframe = pd.DataFrame({'Rating': ratings, 'Informativeness': rating_informativeness})\n",
+    "dataframe.plot('Rating', 'Informativeness', kind='bar')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"CHART: RATING / RATING ACCURACY LOSS\")\n",
+    "dataframe = pd.DataFrame({'Rating': ratings, 'Accuracy Loss': rating_accuracy_loss})\n",
+    "dataframe.plot('Rating', 'Accuracy Loss', kind='bar')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"CHART: RATING / RATING BONUS\")\n",
+    "dataframe = pd.DataFrame({'Rating': ratings, 'Bonus': rating_bonus})\n",
+    "dataframe.plot('Rating', 'Bonus', kind='bar')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"CHART: READER / READER BONUS\")\n",
+    "dataframe = pd.DataFrame({'Reader': readers, 'Score': reader_score})\n",
+    "dataframe.plot('Reader', 'Score', kind='bar')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"CHART: PAPER / PAPER SCORE\")\n",
+    "dataframe = pd.DataFrame({'Paper' : papers, 'Score' : paper_score})\n",
+    "dataframe.plot('Paper', 'Score', kind='bar')\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
