Readersourcing model bug: some work is needed

--- a/notebooks/TrueReview.ipynb
+++ b/notebooks/TrueReview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -18,10 +18,16 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "info = pd.read_csv(\"data/ground_truth/info.csv\")\n",
-    "paper_authors = pd.read_csv(\"data/ground_truth/authors.csv\")\n",
+    "dataset_name = \"seed_1\"\n",
+    "seed_folder_path = f\"data/seed/{dataset_name}/\"\n",
+    "info_filename = f\"{seed_folder_path}info.csv\"\n",
+    "ratings_filename = f\"{seed_folder_path}ratings.csv\"\n",
+    "authors_filename = f\"{seed_folder_path}authors.csv\"\n",
+    "\n",
+    "info = pd.read_csv(info_filename)\n",
+    "paper_authors = pd.read_csv(authors_filename)\n",
     "paper_authors = paper_authors.values\n",
-    "paper_ratings = pd.read_csv(\"data/ground_truth/ratings.csv\")\n",
+    "paper_ratings = pd.read_csv(ratings_filename)\n",
     "paper_ratings = paper_ratings.values\n",
     "\n",
     "# Initial setup\n",
@@ -126,11 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RATING INFORMATIVENESS:  [0.00 0.00 0.00 0.20 0.21 0.00 0.00 0.11 0.01 0.03 0.07 0.12 0.00 0.16\n 0.11 0.07 0.00 0.20 0.01 0.16 0.01 0.01 0.00 0.00 0.01 0.12 0.01 0.01\n 0.02 0.00 0.02 0.06 0.11 0.02 0.22 0.00 0.04 0.26 0.26 0.19 0.02 0.00\n 0.00 0.00 0.00 0.00 0.00 0.00 0.09 0.00]\nRATING ACCURACY LOSS:    [0.00 0.00 0.00 0.23 0.00 0.00 0.00 0.00 0.20 0.13 0.03 0.07 0.05 0.18\n 0.04 0.03 0.39 0.07 0.08 0.02 0.26 0.00 0.03 0.13 0.18 0.01 0.09 0.38\n 0.04 0.01 0.11 0.03 0.03 0.22 0.38 0.00 0.28 0.00 0.55 0.00 0.04 0.00\n 0.02 0.00 0.19 0.06 0.00 0.00 0.38 0.00]\nRATING BONUS:            [0.00 0.00 0.00 0.47 0.56 0.00 0.00 0.29 0.02 0.08 0.18 0.31 0.01 0.38\n 0.28 0.18 0.01 0.50 0.03 0.43 0.02 0.02 0.01 0.00 0.02 0.33 0.01 0.02\n 0.04 0.01 0.04 0.15 0.29 0.04 0.46 0.00 0.09 0.68 0.50 0.49 0.05 0.00\n 0.01 0.00 0.01 0.00 0.00 0.00 0.19 0.00]\nREADER BONUS:            [0.83 0.84 0.67 0.89 0.98 0.83 0.41 0.52 0.60 0.63]\nPAPER  SCORE:            [0.33 0.52 0.53 0.45 0.51]\n"
+     ]
+    }
+   ],
    "source": [
     "# Summary\n",
     "\n",
@@ -138,35 +152,15 @@
     "print(\"RATING ACCURACY LOSS:   \", rating_accuracy_loss)\n",
     "print(\"RATING BONUS:           \", rating_bonus)\n",
     "print(\"READER BONUS:           \", reader_bonus)\n",
-    "print(\"PAPER  SCORE:           \", paper_score)\n",
-    "\n",
-    "# Charts\n",
-    "\n",
-    "print(\"CHART: RATING / RATING INFORMATIVENESS\")\n",
-    "dataframe = pd.DataFrame({'Rating': ratings, 'Informativeness': rating_informativeness})\n",
-    "dataframe.plot('Rating', 'Informativeness', kind='bar')\n",
-    "plt.show()\n",
-    "\n",
-    "print(\"CHART: RATING / RATING ACCURACY LOSS\")\n",
-    "dataframe = pd.DataFrame({'Rating': ratings, 'Accuracy Loss': rating_accuracy_loss})\n",
-    "dataframe.plot('Rating', 'Accuracy Loss', kind='bar')\n",
-    "plt.show()\n",
-    "\n",
-    "print(\"CHART: RATING / RATING BONUS\")\n",
-    "dataframe = pd.DataFrame({'Rating': ratings, 'Bonus': rating_bonus})\n",
-    "dataframe.plot('Rating', 'Bonus', kind='bar')\n",
-    "plt.show()\n",
-    "\n",
-    "print(\"CHART: READER / READER BONUS\")\n",
-    "dataframe = pd.DataFrame({'Reader': readers, 'Score': reader_score})\n",
-    "dataframe.plot('Reader', 'Score', kind='bar')\n",
-    "plt.show()\n",
-    "\n",
-    "print(\"CHART: PAPER / PAPER SCORE\")\n",
-    "dataframe = pd.DataFrame({'Paper' : papers, 'Score' : paper_score})\n",
-    "dataframe.plot('Paper', 'Score', kind='bar')\n",
-    "plt.show()\n"
+    "print(\"PAPER  SCORE:           \", paper_score)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
